# -----------------------------------------------------------------------------
# pyproject.toml — Configuration du projet voltapeak.
#
# Ce fichier configure les outils de lint / formatage pour ce projet.
# Objectif : rendre les linters (ruff, pyflakes, pylint) silencieux sur
# les choix de style volontaires du projet, sans masquer les vraies
# erreurs.
# -----------------------------------------------------------------------------

[project]
name = "voltapeak"
version = "0.1.0"
description = "Analyse de voltampérogrammes SWV avec correction de ligne de base asPLS."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pybaselines",
]

# -----------------------------------------------------------------------------
# Ruff — linter et formateur Python rapide.
# https://docs.astral.sh/ruff/
# -----------------------------------------------------------------------------
[tool.ruff]
# Longueur de ligne tolérée — 120 car nos commentaires inline dépassent
# souvent 80 caractères (choix pédagogique documenté dans le plan de doc).
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Règles activées par défaut dans Ruff :
#   E, F : erreurs pycodestyle + pyflakes (imports inutilisés, etc.).
# On ajoute :
#   W   : warnings pycodestyle (espaces, tabulations).
#   I   : tri des imports (isort).
select = ["E", "F", "W", "I"]

# Règles désactivées — choix assumés du projet :
ignore = [
    # E501 : ligne trop longue. On a déjà mis line-length=120, mais
    # certains blocs de commentaires/docstrings dépassent ponctuellement.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Aucun fichier spécifique pour l'instant — placeholder pour extensions futures.

# -----------------------------------------------------------------------------
# pep8-naming (activable dans ruff via "N", ou via flake8-plugin).
# Le projet utilise volontairement le camelCase pour les fonctions et
# variables (cohérence avec les conventions internes GROUPE TRACE).
# Si un développeur active les règles N802/N803/N806, elles produiront
# un grand nombre de faux positifs — les désactiver explicitement ici
# sert de documentation du choix.
# -----------------------------------------------------------------------------
# [tool.ruff.lint.pep8-naming]  # section non instanciée car "N" non sélectionné.

# -----------------------------------------------------------------------------
# Pylint — si utilisé dans ce projet, mêmes tolérances que ruff.
# -----------------------------------------------------------------------------
[tool.pylint.main]
# camelCase assumé pour les noms de fonctions, variables, arguments.
# Les codes ci-dessous correspondent aux règles pylint de nommage.
disable = [
    "C0103",  # invalid-name : fonctions / variables hors snake_case.
    "C0301",  # line-too-long : cohérent avec ruff (line-length=120).
]

[tool.pylint.format]
max-line-length = 120

# -----------------------------------------------------------------------------
# Mypy — vérification de types (usage optionnel).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # pybaselines, scipy : stubs partiels.
warn_unused_ignores = true

# -----------------------------------------------------------------------------
# Pyright / Pylance — vérification de types côté IDE (VS Code).
# -----------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.10"
# reportPrivateImportUsage : désactivé — matplotlib expose
# NavigationToolbar2Tk depuis backend_tkagg (forme documentée), mais
# Pyright le voit comme un re-export privé. Idem pour plusieurs symboles
# pandas / scipy. Désactivation globale = moins de # type: ignore locaux.
reportPrivateImportUsage = "none"
# reportMissingTypeStubs : les bibliothèques scientifiques n'ont pas
# toutes des stubs officiels — on n'en fait pas un blocage.
reportMissingTypeStubs = "none"
